Update gear values in index.html

--- a/index.html
+++ b/index.html
@@ -364,10 +364,10 @@
 
         <div class="legendary-note">
             <strong>Gear Values:</strong><br>
-            • <strong>Raid Weapon:</strong> 1966 Primary / 1966 Secondary (No Reforge, No Legendary)<br>
-            • <strong>Standard Weapon:</strong> 1512 Primary / 756 Secondary / 453 Reforge<br>
-            • <strong>Raid Armor:</strong> 756 Primary / 756 Secondary / 226 Reforge (No Legendary)<br>
-            • <strong>Standard Armor:</strong> 756 Primary / 378 Secondary / 226 Reforge
+            • <strong>Raid Weapon:</strong> 2480 Primary / 2480 Secondary / + Bonus (No Reforge, No Legendary)<br>
+            • <strong>Raid Armor:</strong> 954 Primary / 954 Secondary / 286 Reforge (No Legendary)<br>
+            • <strong>Standard Weapon:</strong> 1908 Primary / 954 Secondary / 572 Reforge<br>
+            • <strong>Standard Armor:</strong> 954 Primary / 477 Secondary / 286 Reforge
         </div>
     </div>
 
