Update title and heading for gear planner tool

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>RaoH | S2 BPSR Gear Planner Tool</title>
+    <title>RaoH | S2 BPSR 160 Gear Planner Tool</title>
     <style>
         /* --- CSS STYLES --- */
         body { 
@@ -215,7 +215,7 @@
 <div class="main-wrapper">
 
     <div class="panel planner-panel">
-        <h2>RaoH | S2 BPSR Gear Planner Tool</h2>
+        <h2>RaoH | S2 BPSR 160 Gear Planner Tool</h2>
         
         <div class="tab-container">
             <button class="tab-btn active" onclick="switchTab('planner')">Gear Planner</button>
