--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
 <div class="main-wrapper">
     <div class="panel planner-panel">
-        <h2>PLANEJAMENTO DO GEAR 160 - BPSR S2</h2>
+        <h2>160 GEAR PLANNER & TOOLS | BPSR S2</h2>
         
         <div class="tab-container">
             <button class="tab-btn active" onclick="ui.switchTab('planner')">Manual Planner</button>
