--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
 <div class="main-wrapper">
     <div class="panel planner-panel">
-        <h2>160 GEAR PLANNER & TOOLS | BPSR S2</h2>
+        <h2>160 GEAR PLANNER | BPSR S2</h2>
         
         <div class="tab-container">
             <button class="tab-btn active" onclick="ui.switchTab('planner')">Manual Planner</button>
@@ -340,7 +340,7 @@
     // --- 1. GAME DATA CONFIGURATION ---
     const GAME_DATA = {
         TEXT: {
-            CREDITS: "Produzido por Luxxio // Atualizado por: KrowMeLL",
+            CREDITS: "Produzido por Luxxio // Atualizado por: KrowMeLL / RaoH",
             NOTES: `<strong>Gear Values:</strong><br>
                     • <strong>Raid Weapon:</strong> 2480 P / 2480 S (No Reforge)<br>
                     • <strong>Raid Armor:</strong> 954 P / 954 S / 286 Reforge<br>
