--- a/index.html
+++ b/index.html
@@ -342,10 +342,10 @@
         TEXT: {
             CREDITS: "Produzido por Luxxio // Atualizado por: KrowMeLL / RaoH",
             NOTES: `<strong>Gear Values:</strong><br>
-                    • <strong>Raid Weapon:</strong> 2480 P / 2480 S (No Reforge)<br>
-                    • <strong>Raid Armor:</strong> 954 P / 954 S / 286 Reforge<br>
-                    • <strong>Standard Weapon:</strong> 1908 P / 954 S / 572 Reforge<br>
-                    • <strong>Standard Armor:</strong> 954 P / 477 S / 286 Reforge`
+                    • <strong>Raid Weapon:</strong> 2480 Primary / 2480 Secondary (No Reforge)<br>
+                    • <strong>Raid Armor:</strong> 954 Primary / 954 Secondary / 286 Reforge<br>
+                    • <strong>Standard Weapon:</strong> 1908 Primary / 954 Secondary / 572 Reforge<br>
+                    • <strong>Standard Armor:</strong> 954 Primary / 477 Secondary / 286 Reforge`
         },
         STATS: ["Versatility", "Mastery", "Haste", "Crit", "Luck"],
         SLOTS: ["Weapon", "Helmet", "Chest", "Gloves", "Boots", "Earrings", "Necklace", "Ring", "Bracelet (L)", "Bracelet (R)", "Charm"],
