--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 <script>
     // --- 1. DATA CONFIGURATION ---
     const GAME_DATA = {
-        TEXT: { CREDITS: "Produced by Luxxos // Updated by: KrowMeLL / RaoH", NOTES: `<strong>Gear Values:</strong><br>• Raid Weapon: 2480/2480 (No Ref)<br>• Raid Armor: 954/954 + 286<br>• Std Weapon: 1908/954 + 572<br>• Std Armor: 954/477 + 286` },
+        TEXT: { CREDITS: "Produced by Luxxos // Updated by: KrowMeLL / RaoH", NOTES: `<strong>Gear Values:</strong><br>• Raid Weapon: 2480 Primary / 2480 Secondary / No Reforge<br>• Raid Armor: 954 Primary / 954 Secondary / 286 Reforge <br>• Standard Weapon: 1908 Primary /954 Secondary / 572 Reforge<br>• Standard Armor: 954 Primary / 477 Secondary / 286 Reforge` },
         STATS: ["Versatility", "Mastery", "Haste", "Crit", "Luck"],
         SLOTS: ["Weapon", "Helmet", "Chest", "Gloves", "Boots", "Earrings", "Necklace", "Ring", "Bracelet (L)", "Bracelet (R)", "Charm"],
         RAID_SLOTS: ["Weapon", "Helmet", "Chest", "Gloves", "Boots", "Bracelet (L)", "Bracelet (R)"],
