--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
             SLOT_IDS: ['1', '2'],
             // Define cada Imagine com seu Status e sua Tabela de Valores
             OPTIONS: {
-                "Img (Mastery)": { stat: "Mastery", vals: [3584, 4636, 5688, 6740, 7792, 8960] },
-                "Img (Haste)": { stat: "Haste", vals: [3584, 4636, 5688, 6740, 7792, 8960] },
-                "Img (Versatility)": { stat: "Versatility", vals: [3584, 4636, 5688, 6740, 7792, 8960] },
+                "Phantom Arachnocrab (Mastery)": { stat: "Mastery", vals: [3584, 4636, 5688, 6740, 7792, 8960] },
+                "Celestial Flier (Haste)": { stat: "Haste", vals: [3584, 4636, 5688, 6740, 7792, 8960] },
+                "Goblin King (Versatility)": { stat: "Versatility", vals: [3584, 4636, 5688, 6740, 7792, 8960] },
                 // Novo Imagine Adicionado
                 "Bluespine Lizard": { stat: "Versatility", vals: [2016, 2615, 3214, 3813, 4412, 5040] }
             }
