--- a/index.html
+++ b/index.html
@@ -302,8 +302,7 @@
                 "Phantom Arachnocrab (Mastery)": { stat: "Mastery", vals: [3584, 4636, 5688, 6740, 7792, 8960] },
                 "Celestial Flier (Haste)": { stat: "Haste", vals: [3584, 4636, 5688, 6740, 7792, 8960] },
                 "Goblin King (Versatility)": { stat: "Versatility", vals: [3584, 4636, 5688, 6740, 7792, 8960] },
-                // Novo Imagine Adicionado
-                "Bluespine Lizard": { stat: "Versatility", vals: [2016, 2615, 3214, 3813, 4412, 5040] }
+                "Bluespine Lizard (Versatility)": { stat: "Versatility", vals: [2016, 2615, 3214, 3813, 4412, 5040] }
             }
         },
         // ------------------------------------------
