--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Gear Planner | S2 Optimized</title>
+    <title>BPSR | GEAR STAT PLANNER | LEVEL 160</title>
     <style>
         /* =========================================
            VISUAL THEME: MIDNIGHT GOLD
@@ -158,7 +158,7 @@
 
 <div class="main-wrapper">
     <div class="panel planner-panel">
-        <h2>PLANEJAMENTO DO GEAR 160 - BPSR S2</h2>
+        <h2>BPSR | GEAR STAT PLANNER | LEVEL 160</h2>
         
         <div class="tab-container">
             <button class="tab-btn active" onclick="ui.switchTab('planner')">Manual Planner</button>
@@ -289,7 +289,7 @@
 <script>
     // --- DATA CONFIGURATION ---
     const GAME_DATA = {
-        TEXT: { CREDITS: "Produced by Luxxos // Updated by: KrowMeLL / RaoH", NOTES: `<strong>Gear Values:</strong><br>• Raid Weapon: 2480 Primary / 2480 Secondary / No Reforge<br>• Raid Armor: 954 Primary / 954 Secondary / 286 Reforge <br>• Standard Weapon: 1908 Primary /954 Secondary / 572 Reforge<br>• Standard Armor: 954 Primary / 477 Secondary / 286 Reforge` },
+        TEXT: { CREDITS: "Produced by Luxxos // Updated by: RaoH", NOTES: `<strong>Gear Values:</strong><br>• Raid Weapon: 2480 Primary / 2480 Secondary / No Reforge<br>• Raid Armor: 954 Primary / 954 Secondary / 286 Reforge <br>• Standard Weapon: 1908 Primary /954 Secondary / 572 Reforge<br>• Standard Armor: 954 Primary / 477 Secondary / 286 Reforge` },
         STATS: ["Versatility", "Mastery", "Haste", "Crit", "Luck"],
         SLOTS: ["Weapon", "Helmet", "Chest", "Gloves", "Boots", "Earrings", "Necklace", "Ring", "Bracelet (L)", "Bracelet (R)", "Charm"],
         RAID_SLOTS: ["Weapon", "Helmet", "Chest", "Gloves", "Boots", "Bracelet (L)", "Bracelet (R)"],
