--- a/index.html
+++ b/index.html
@@ -336,16 +336,16 @@
         { name: "Blackfire Foxen", slots: ["Weapon","Earrings","Necklace","Ring"], stats: { 1: {Endurance:80, Agility:25}, 2: {}, 3: {} } },
         
         // Armor
-        { name: "Flamehorn (Legendary)", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Versatility:500}, 2: {}, 3: {} } },
-        { name: "Blackstone Captain (Leg)", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Mastery:500}, 2: {}, 3: {} } },
-        { name: "Cabbage Kingpin (Leg)", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Luck:500}, 2: {}, 3: {} } },
-        { name: "Crimson Foxen (Leg)", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Haste:500}, 2: {}, 3: {} } },
-        { name: "Goblin Chief (Leg)", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Crit:500}, 2: {}, 3: {} } },
-        { name: "Cabbage Blaster", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Versatility:200}, 2: {}, 3: {} } },
-        { name: "Glimmer Caprahorn", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Mastery:200}, 2: {}, 3: {} } },
-        { name: "Cabbage Tough Guy", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Luck:200}, 2: {}, 3: {} } },
-        { name: "Wasteland Foxen", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Haste:200}, 2: {}, 3: {} } },
-        { name: "Cabbage Killer", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Crit:200}, 2: {}, 3: {} } },
+        { name: "Flamehorn (Legendary) (Versatility)", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Versatility:500}, 2: {}, 3: {} } },
+        { name: "Blackstone Captain (Leg) (Mastery)", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Mastery:500}, 2: {}, 3: {} } },
+        { name: "Cabbage Kingpin (Leg) (Luck)", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Luck:500}, 2: {}, 3: {} } },
+        { name: "Crimson Foxen (Leg) (Haste)", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Haste:500}, 2: {}, 3: {} } },
+        { name: "Goblin Chief (Leg) (Crit)", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Crit:500}, 2: {}, 3: {} } },
+        { name: "Cabbage Blaster (Versatility)", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Versatility:200}, 2: {}, 3: {} } },
+        { name: "Glimmer Caprahorn (Mastery)", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Mastery:200}, 2: {}, 3: {} } },
+        { name: "Cabbage Tough Guy (Luck)", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Luck:200}, 2: {}, 3: {} } },
+        { name: "Wasteland Foxen (Haste)", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Haste:200}, 2: {}, 3: {} } },
+        { name: "Cabbage Killer (Crit)", slots: ["Helmet","Chest","Gloves","Boots"], stats: { 1: {Crit:200}, 2: {}, 3: {} } },
 
         // Accessories
         { name: "Foxen", slots: ["Earrings","Necklace","Ring"], stats: { 1: {Endurance:50, Agility:15}, 2: {}, 3: {} } },
@@ -353,11 +353,11 @@
         { name: "Nether Caprahorn", slots: ["Earrings","Necklace","Ring"], stats: { 1: {Endurance:50, Strength:15}, 2: {}, 3: {} } },
 
         // Jewelry
-        { name: "Blackstone Vanguard", slots: ["Bracelet (L)","Bracelet (R)","Charm"], stats: { 1: {Haste:300}, 2:{}, 3: {} } },
-        { name: "Ruthless Cabbage", slots: ["Bracelet (L)","Bracelet (R)","Charm"], stats: { 1: {Luck:300}, 2:{}, 3: {} } },
-        { name: "Gloomy Cabbage", slots: ["Bracelet (L)","Bracelet (R)","Charm"], stats: { 1: {Crit:300}, 2:{}, 3: {} } },
-        { name: "Goblin Shaman", slots: ["Bracelet (L)","Bracelet (R)","Charm"], stats: { 1: {Versatility:300}, 2:{}, 3: {} } },
-        { name: "Goblin Trickster", slots: ["Bracelet (L)","Bracelet (R)","Charm"], stats: { 1: {Mastery:300}, 2:{}, 3: {} } },
+        { name: "Blackstone Vanguard (Haste)", slots: ["Bracelet (L)","Bracelet (R)","Charm"], stats: { 1: {Haste:300}, 2:{}, 3: {} } },
+        { name: "Ruthless Cabbage (Luck)", slots: ["Bracelet (L)","Bracelet (R)","Charm"], stats: { 1: {Luck:300}, 2:{}, 3: {} } },
+        { name: "Gloomy Cabbage (Crit)", slots: ["Bracelet (L)","Bracelet (R)","Charm"], stats: { 1: {Crit:300}, 2:{}, 3: {} } },
+        { name: "Goblin Shaman (Versatility)", slots: ["Bracelet (L)","Bracelet (R)","Charm"], stats: { 1: {Versatility:300}, 2:{}, 3: {} } },
+        { name: "Goblin Trickster (Mastery)", slots: ["Bracelet (L)","Bracelet (R)","Charm"], stats: { 1: {Mastery:300}, 2:{}, 3: {} } },
         
         { name: "Frost Lizard", slots: ["Bracelet (L)","Bracelet (R)","Charm"], stats: { 1: {Strength:12, Crit:140}, 2:{}, 3:{} } },
         { name: "Magma Lizard", slots: ["Bracelet (L)","Bracelet (R)","Charm"], stats: { 1: {Strength:12, Haste:140}, 2:{}, 3:{} } },
